build/log/idf_py_stdout_output_2087799
Command: ninja all
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/bbq20_keyboard.c.obj
FAILED: [code=1] esp-idf/main/CMakeFiles/__idf_main.dir/bbq20_keyboard.c.obj 
/home/ralsina/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/ralsina/code/esposito/build/config -I/home/ralsina/code/esposito/main -I/opt/esp-idf/components/esp_libc/platform_include -I/opt/esp-idf/components/freertos/config/include -I/opt/esp-idf/components/freertos/config/include/freertos -I/opt/esp-idf/components/freertos/config/xtensa/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/opt/esp-idf/components/freertos/esp_additions/include -I/opt/esp-idf/components/esp_hw_support/include -I/opt/esp-idf/components/esp_hw_support/include/soc -I/opt/esp-idf/components/esp_hw_support/ldo/include -I/opt/esp-idf/components/esp_hw_support/debug_probe/include -I/opt/esp-idf/components/esp_hw_support/etm/include -I/opt/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/opt/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/opt/esp-idf/components/esp_hw_support/power_supply/include -I/opt/esp-idf/components/esp_hw_support/modem/include -I/opt/esp-idf/components/esp_hw_support/port/esp32/. -I/opt/esp-idf/components/esp_hw_support/port/esp32/include -I/opt/esp-idf/components/heap/include -I/opt/esp-idf/components/heap/tlsf -I/opt/esp-idf/components/log/include -I/opt/esp-idf/components/soc/include -I/opt/esp-idf/components/soc/esp32 -I/opt/esp-idf/components/soc/esp32/include -I/opt/esp-idf/components/soc/esp32/register -I/opt/esp-idf/components/hal/platform_port/include -I/opt/esp-idf/components/hal/esp32/include -I/opt/esp-idf/components/hal/include -I/opt/esp-idf/components/esp_rom/include -I/opt/esp-idf/components/esp_rom/esp32/include -I/opt/esp-idf/components/esp_rom/esp32/include/esp32 -I/opt/esp-idf/components/esp_rom/esp32 -I/opt/esp-idf/components/esp_common/include -I/opt/esp-idf/components/esp_system/include -I/opt/esp-idf/components/esp_system/port/soc -I/opt/esp-idf/components/esp_system/port/include/private -I/opt/esp-idf/components/esp_stdio/include -I/opt/esp-idf/components/xtensa/esp32/include -I/opt/esp-idf/components/xtensa/include -I/opt/esp-idf/components/xtensa/deprecated_include -I/opt/esp-idf/components/esp_hal_gpio/include -I/opt/esp-idf/components/esp_hal_gpio/esp32/include -I/opt/esp-idf/components/esp_hal_usb/include -I/opt/esp-idf/components/esp_hal_pmu/include -I/opt/esp-idf/components/esp_hal_pmu/esp32/include -I/opt/esp-idf/components/esp_hal_ana_conv/include -I/opt/esp-idf/components/esp_hal_ana_conv/esp32/include -I/opt/esp-idf/components/esp_hal_dma/include -I/opt/esp-idf/components/esp_hal_i2s/include -I/opt/esp-idf/components/esp_hal_i2s/esp32/include -I/opt/esp-idf/components/lwip/include -I/opt/esp-idf/components/lwip/include/apps -I/opt/esp-idf/components/lwip/lwip/src/include -I/opt/esp-idf/components/lwip/port/include -I/opt/esp-idf/components/lwip/port/freertos/include -I/opt/esp-idf/components/lwip/port/esp32xx/include -I/opt/esp-idf/components/lwip/port/esp32xx/include/arch -I/opt/esp-idf/components/lwip/port/esp32xx/include/sys -I/opt/esp-idf/components/driver/i2c/include -I/opt/esp-idf/components/driver/touch_sensor/include -I/opt/esp-idf/components/driver/twai/include -I/opt/esp-idf/components/driver/touch_sensor/esp32/include -I/opt/esp-idf/components/esp_hal_i2c/esp32/include -I/opt/esp-idf/components/esp_hal_i2c/include -I/opt/esp-idf/components/esp_hal_twai/include -I/opt/esp-idf/components/esp_hal_twai/esp32/include -I/opt/esp-idf/components/esp_hal_touch_sens/esp32/include -I/opt/esp-idf/components/esp_hal_touch_sens/include -I/opt/esp-idf/components/esp_app_format/include -I/opt/esp-idf/components/pthread/include -I/opt/esp-idf/components/spiffs/include -I/opt/esp-idf/components/esp_partition/include -I/opt/esp-idf/components/esp_blockdev/include -I/opt/esp-idf/components/esp_driver_spi/include -I/opt/esp-idf/components/esp_pm/include -I/opt/esp-idf/components/esp_hal_gpspi/include -I/opt/esp-idf/components/esp_hal_gpspi/esp32/include -I/opt/esp-idf/components/esp_driver_dma/include -I/opt/esp-idf/components/esp_driver_i2c/include -I/home/ralsina/code/esposito/managed_components/LovyanGFX/src -I/opt/esp-idf/components/nvs_flash/include -I/opt/esp-idf/components/efuse/include -I/opt/esp-idf/components/efuse/esp32/include -I/opt/esp-idf/components/esp_lcd/include -I/opt/esp-idf/components/esp_lcd/interface -I/opt/esp-idf/components/esp_driver_gpio/include -I/opt/esp-idf/components/esp_driver_parlio/include -I/opt/esp-idf/components/esp_hal_parlio/include -I/opt/esp-idf/components/esp_hal_lcd/include -I/opt/esp-idf/components/esp_timer/include -I/opt/esp-idf/components/esp_mm/include -I/opt/esp-idf/components/esp_driver_ledc/include -I/opt/esp-idf/components/esp_hal_ledc/include -I/opt/esp-idf/components/esp_hal_ledc/esp32/include -I/opt/esp-idf/components/esp_driver_i2s/include @"/home/ralsina/code/esposito/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/ralsina/code/esposito=. -fmacro-prefix-map=/opt/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/bbq20_keyboard.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/bbq20_keyboard.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/bbq20_keyboard.c.obj -c /home/ralsina/code/esposito/main/bbq20_keyboard.c
In file included from /home/ralsina/code/esposito/main/bbq20_keyboard.c:3:
/opt/esp-idf/components/driver/i2c/include/driver/i2c.h:13:9: note: '#pragma message: 
================================ CRITICAL WARNING ================================
This legacy I2C driver (driver/i2c.h) is officially END-OF-LIFE (EOL) as of ESP-IDF v6.0.

1. NO SUPPORT: ESP-IDF will not provide updates, bug fixes, or security patches timely.
2. PLANNED REMOVAL: This driver WILL BE REMOVED in ESP-IDF v7.0 (next major release).
3. ACTION REQUIRED: Migrate to 'driver/i2c_master.h' or 'driver/i2c_slave.h' immediately.
   - If you are a library maintainer, please update your code.
   - If you are using 3rd-party libraries, contact the authors for updates.

4. SUPPRESS WARNING: Set Kconfig 'CONFIG_I2C_SUPPRESS_DEPRECATE_WARN=y' to silent
   this warning. However, by doing so, YOU ASSUME ALL RISKS including potential
   security vulnerabilities, system instability, and future incompatibility.

For API reference of the new I2C driver, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/api-reference/peripherals/i2c.html
For other items about migration, see: https://docs.espressif.com/projects/esp-idf/en/latest/esp32/migration-guides/index.html
==================================================================================
   '
   13 | #pragma message("\n" \
      |         ^~~~~~~
/home/ralsina/code/esposito/main/bbq20_keyboard.c: In function 'bbq20_read_reg':
/home/ralsina/code/esposito/main/bbq20_keyboard.c:36:5: error: implicit declaration of function 'i2c_master_start_write'; did you mean 'i2c_master_write'? [-Wimplicit-function-declaration]
   36 |     i2c_master_start_write(cmd);
      |     ^~~~~~~~~~~~~~~~~~~~~~
      |     i2c_master_write
/home/ralsina/code/esposito/main/bbq20_keyboard.c:39:5: error: implicit declaration of function 'i2c_master_start_read'; did you mean 'i2c_master_start'? [-Wimplicit-function-declaration]
   39 |     i2c_master_start_read(cmd);
      |     ^~~~~~~~~~~~~~~~~~~~~
      |     i2c_master_start
/home/ralsina/code/esposito/main/bbq20_keyboard.c:40:37: error: 'I2C_MASTER_LAST_ACK' undeclared (first use in this function); did you mean 'I2C_MASTER_LAST_NACK'?
   40 |     i2c_master_read(cmd, data, len, I2C_MASTER_LAST_ACK);
      |                                     ^~~~~~~~~~~~~~~~~~~
      |                                     I2C_MASTER_LAST_NACK
/home/ralsina/code/esposito/main/bbq20_keyboard.c:40:37: note: each undeclared identifier is reported only once for each function it appears in
[2/9] Performing build step for 'bootloader'
[1/1] cd /home/ralsina/code/esposito/build/bootloader && /home/ralsina/.espressif/python_env/idf6.0_py3.14_env/bin/python /opt/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/ralsina/code/esposito/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
ninja: build stopped: subcommand failed.
